tests/sources/should-not-compile/switch-empty-case.c
int x = 5;
switch (x)
{
case:
    x + 1;
}